welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:6: warning: enclosing method fin has result type Unit: return value discarded
      return true
      ^SnakeBuggle:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:9: warning: enclosing method fin has result type Unit: return value discarded
      return false
      ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SnakeBuggle:13: warning: enclosing method fin has result type Unit: return value discarded
    return false
    ^SnakeBuggle:19: error: value unary_! is not a member of Unit
  while(!fin()) {
        ^